--- a/src/Assignment-4/assignment4.html
+++ b/src/Assignment-4/assignment4.html
@@ -59,10 +59,10 @@
 	  <footer>
 		<h4>Learn About Dogs Online</h4>
 		<ul>
-		  <li><img src="images/facebook.svg"/></li>
-		  <li><img src="images/twitter.svg"/></li>
-		  <li><img src="images/instagram.svg"/></li>
-		  <li><img src="images/linkedin.svg"/></li>
+		  <li><a href="https://www.facebook.com" target="_blank"><img src="images/facebook.svg"/></a></li>
+		  <li><a href="https://twitter.com/?lang=en-in" target="_blank"><img src="images/twitter.svg"/></a></li>
+		  <li><a href="https://www.instagram.com" target="_blank"><img src="images/instagram.svg"/></a></li>
+		  <li><a href="https://in.linkedin.com" target="_blank"><img src="images/linkedin.svg"/></a></li>
 		</ul>
 		<a href="https://github.com/turingschool-examples/introductory-static-site" class="link"target="_blank">See this on GitHub</a>	  
 	  </footer>
